Trying player goals

--- a/prueba.ipynb
+++ b/prueba.ipynb
@@ -254,13 +254,16 @@
     "\n",
     "soup = BeautifulSoup(html, \"lxml\")\n",
     "\n",
+    "#Get teams\n",
     "teams = [e.text.strip() for e in soup.select('.vevent tbody td[width=\"22%\"]')]\n",
+    "#Filter local teams\n",
     "localTeams = teams[0::2]\n",
+    "#Get local goals\n",
     "goals = [int(e.text.strip()[0]) for e in soup.select('.vevent tbody td[width=\"12%\"]')]\n",
     "\n",
     "localGoals = {}\n",
     "\n",
-    "# match teams with goals\n",
+    "# match local teams with goals\n",
     "for index in range(0, len(localTeams)):\n",
     "    if localTeams[index] in localGoals:\n",
     "        localGoals[localTeams[index]] += goals[index]\n",
@@ -276,92 +279,429 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 256,
+   "execution_count": 351,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Gazinski  12'Chéryshev  43', 90+1'Dziuba  71'Golovín  90+4'\n",
-      "\n",
-      "Fathy  47' (a.g.)Chéryshev  59'Dziuba  62'\n",
-      "Suárez  23'\n",
-      "Suárez  10'Chéryshev  23' (a.g.)Cavani  90'\n",
-      "Al-Faraj  45+6' Al-Dawsari  90+5'\n",
-      "\n",
-      "Ronaldo  4' , 44', 88'\n",
-      "Ronaldo  4'\n",
-      "\n",
-      "Ansarifard  90+3' \n",
-      "Isco  19'Aspas  90+1'\n",
-      "Griezmann  58' Behich  81' (a.g.)\n",
-      "\n",
-      "Eriksen  7'\n",
-      "Mbappé  34'\n",
-      "\n",
-      "\n",
-      "Agüero  19'\n",
-      "Etebo  32' (a.g.)Modrić  71' \n",
-      "\n",
-      "Musa  49', 75'\n",
-      "Moses  51' \n",
-      "Sigurðsson  76' \n",
-      "\n",
-      "Coutinho  20'\n",
-      "Coutinho  90+1'Neymar  90+7'\n",
-      "Mitrović  5'\n",
-      "\n",
-      "Džemaili  31'Drmić  88'\n",
-      "\n",
-      "Granqvist  65' \n",
-      "H. M. Son  90+3'\n",
-      "Reus  48'Kroos  90+5'\n",
-      "Y. G. Kim  90+3'H. M. Son  90+6'\n",
-      "\n",
-      "Mertens  47'Lukaku  69', 75'\n",
-      "Sassi  35' \n",
-      "Hazard  6' , 51'Lukaku  16', 45+3'Batshuayi  90'\n",
-      "Stones  8', 40'Kane  22' , 45+1' , 62'Lingard  36'\n",
-      "\n",
-      "Meriah  33' (a.g.)\n",
-      "Quintero  39'\n",
-      "Krychowiak  86'\n",
-      "Inui  34'Honda  78'\n",
-      "\n",
-      "\n",
-      "\n",
-      "Cavani  7', 62'\n",
-      "Griezmann  13' Pavard  57'Mbappé  64', 68'\n",
-      "Ignashévich  12' (a.g.)\n",
-      "Croacia\n",
-      "Badelj Kramarić Modrić Pivarić Rakitić\n",
-      "Neymar  51'Firmino  88'\n",
-      "Vertonghen  69'Fellaini  74'Chadli  90+4'\n",
-      "Forsberg  66'\n",
-      "Mina  90+3'\n",
-      "Uruguay\n",
-      "Brasil\n",
-      "Suecia\n",
-      "Rusia\n",
-      "Smólov Dzagóyev Fernandes Ignashévich Kuziáyev\n",
-      "Umtiti  51'\n",
-      "Perišić  68'Mandžukić  109'\n",
-      "Meunier  4'Hazard  82'\n",
-      "Mandžukić  18' (a.g.)Griezmann  38' Pogba  59'Mbappé  65'\n"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Player</th>\n",
+       "      <th>Goals</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Ronaldo</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>ukaku</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>ane</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>bappé</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>héryshev</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>ziuba</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Suárez</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>Musa</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>Coutinho</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>Hazard</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>Stones</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>Cavani</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>Gazinski</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>olovín</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>Al-Faraj</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>Ansarifard</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>Isco</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>spas</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>Eriksen</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>Mbappé</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20</th>\n",
+       "      <td>Agüero</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21</th>\n",
+       "      <td>Moses</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22</th>\n",
+       "      <td>Sigurðsson</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23</th>\n",
+       "      <td>eymar</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>24</th>\n",
+       "      <td>Mitrović</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25</th>\n",
+       "      <td>Džemaili</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>26</th>\n",
+       "      <td>rmić</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>27</th>\n",
+       "      <td>Granqvist</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>28</th>\n",
+       "      <td>H.</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>29</th>\n",
+       "      <td>Reus</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>30</th>\n",
+       "      <td>roos</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>31</th>\n",
+       "      <td>Y.</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>32</th>\n",
+       "      <td>.</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>33</th>\n",
+       "      <td>Mertens</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>34</th>\n",
+       "      <td>Sassi</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>35</th>\n",
+       "      <td>atshuayi</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>36</th>\n",
+       "      <td>ingard</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>37</th>\n",
+       "      <td>Quintero</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>38</th>\n",
+       "      <td>Krychowiak</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>39</th>\n",
+       "      <td>Inui</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>40</th>\n",
+       "      <td>onda</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>41</th>\n",
+       "      <td>Griezmann</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>42</th>\n",
+       "      <td>Mandžukić</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>43</th>\n",
+       "      <td>Neymar</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>44</th>\n",
+       "      <td>irmino</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>45</th>\n",
+       "      <td>Vertonghen</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>46</th>\n",
+       "      <td>ellaini</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>47</th>\n",
+       "      <td>hadli</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>48</th>\n",
+       "      <td>Forsberg</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>49</th>\n",
+       "      <td>Mina</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50</th>\n",
+       "      <td>Renato</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>51</th>\n",
+       "      <td>Chéryshev</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>52</th>\n",
+       "      <td>ernandes</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>53</th>\n",
+       "      <td>Umtiti</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>54</th>\n",
+       "      <td>Perišić</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>55</th>\n",
+       "      <td>andžukić</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>56</th>\n",
+       "      <td>Meunier</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>57</th>\n",
+       "      <td>azard</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        Player  Goals\n",
+       "0      Ronaldo      4\n",
+       "1        ukaku      4\n",
+       "2          ane      3\n",
+       "3        bappé      3\n",
+       "4     héryshev      2\n",
+       "5        ziuba      2\n",
+       "6       Suárez      2\n",
+       "7         Musa      2\n",
+       "8     Coutinho      2\n",
+       "9       Hazard      2\n",
+       "10      Stones      2\n",
+       "11      Cavani      2\n",
+       "12    Gazinski      1\n",
+       "13      olovín      1\n",
+       "14    Al-Faraj      1\n",
+       "15  Ansarifard      1\n",
+       "16        Isco      1\n",
+       "17        spas      1\n",
+       "18     Eriksen      1\n",
+       "19      Mbappé      1\n",
+       "20      Agüero      1\n",
+       "21       Moses      1\n",
+       "22  Sigurðsson      1\n",
+       "23       eymar      1\n",
+       "24    Mitrović      1\n",
+       "25    Džemaili      1\n",
+       "26        rmić      1\n",
+       "27   Granqvist      1\n",
+       "28          H.      1\n",
+       "29        Reus      1\n",
+       "30        roos      1\n",
+       "31          Y.      1\n",
+       "32           .      1\n",
+       "33     Mertens      1\n",
+       "34       Sassi      1\n",
+       "35    atshuayi      1\n",
+       "36      ingard      1\n",
+       "37    Quintero      1\n",
+       "38  Krychowiak      1\n",
+       "39        Inui      1\n",
+       "40        onda      1\n",
+       "41   Griezmann      1\n",
+       "42   Mandžukić      1\n",
+       "43      Neymar      1\n",
+       "44      irmino      1\n",
+       "45  Vertonghen      1\n",
+       "46     ellaini      1\n",
+       "47       hadli      1\n",
+       "48    Forsberg      1\n",
+       "49        Mina      1\n",
+       "50      Renato      1\n",
+       "51   Chéryshev      1\n",
+       "52    ernandes      1\n",
+       "53      Umtiti      1\n",
+       "54     Perišić      1\n",
+       "55    andžukić      1\n",
+       "56     Meunier      1\n",
+       "57       azard      1"
+      ]
+     },
+     "execution_count": 351,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "players = [e.text.strip().replace('(pen.)', '') for e in soup.select('td[align=\"right\"]')][1::2]\n",
+    "import re\n",
+    "players = [ e.text.strip()\n",
+    "           .replace(\"(pen.),\", \",\")\n",
+    "           .replace(\"(pen.)\", \"\\n\")\n",
+    "           .replace(\"(a.g.)\", \"(a.g.)\\n\") for e in soup.select('td[align=\"right\"]')]\n",
+    "#get only goals, not teams\n",
+    "players = filter(lambda elem: '\\'' in elem,players)\n",
     "\n",
-    "for e in players:\n",
-    "    print(e)"
+    "#split player from other players\n",
+    "playersSplit = []\n",
+    "for elem in players:\n",
+    "    a = re.split(\"\\'[A-Z]\", elem)\n",
+    "    for player in a:\n",
+    "        if(player.count('(a.g.)') == 0):\n",
+    "            playersSplit.append(player)\n",
+    "\n",
+    "\n",
+    "playerGoal = {}\n",
+    "for i in playersSplit:\n",
+    "    tmp = i.split(\" \")[0]\n",
+    "    if tmp in playerGoal:\n",
+    "        playerGoal[tmp] += i.count(',')+1\n",
+    "    else:\n",
+    "        playerGoal[tmp] = i.count(',')+1\n",
+    "        \n",
+    "sortedPlayerGoals = sorted(playerGoal.items(), key=lambda elem: elem[1], reverse=True)\n",
+    "pd.DataFrame(sortedPlayerGoals, columns=[\"Player\",\"Goals\"])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 244,
+   "execution_count": 289,
    "metadata": {},
    "outputs": [
     {
@@ -373,6 +713,7 @@
     }
    ],
    "source": [
+    "#Get final rounds goals\n",
     "finalRoundGoals = goals[-16::2]\n",
     "avgFinalGoals = sum(finalRoundGoals)/len(finalRoundGoals)\n",
     "    \n",
